[package]
name = "intran3t-polkavm-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
polkavm-derive = "0.25.0"
simplealloc = { version = "0.0.1", git = "https://github.com/paritytech/polkavm.git" }
ethabi = { version = "18.0", default-features = false }

[dependencies.uapi]
package = "pallet-revive-uapi"
git = "https://github.com/paritytech/polkadot-sdk.git"
rev = "b7b7f0c50f6ce8bad7a7a3a10139e53714740b4e"
default-features = false
features = ["unstable-hostfn"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = false
overflow-checks = false

[[bin]]
name = "accesspass"
path = "src/accesspass.rs"

[[bin]]
name = "forms"
path = "src/forms.rs"

[[bin]]
name = "test_minimal"
path = "src/test_minimal.rs"

[[bin]]
name = "forms_v2"
path = "src/forms_v2.rs"

[[bin]]
name = "forms_debug"
path = "src/forms_debug.rs"

[[bin]]
name = "forms_debug_abi"
path = "src/forms_debug_abi.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
